metadata/force-app/main/default/objects/Quote/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>