metadata/force-app/main/default/objects/Quote/fields/Additional_Modules_ARR__c.field-meta.xml
<CustomField>
    <fullName>Additional_Modules_ARR__c</fullName>
    <description>Used to store the ARR of additional modules purchased with upsell opps during the renewal</description>
    <label>Additional Modules ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>