metadata/force-app/main/default/objects/Quote/fields/Amendments_RQLI_Returned__c.field-meta.xml
<CustomField>
    <fullName>Amendments_RQLI_Returned__c</fullName>
    <description>Created this field for table visibility purpose.</description>
    <formula>IF ( OR(No_of_Amendments__c &gt; 0,No_of_Removed_Quote_Line_Item__c &gt; 0), TRUE, FALSE)</formula>
    <label>Amendments/RQLI Returned?</label>
    <type>Checkbox</type>
</CustomField>