metadata/force-app/main/default/objects/Quote/fields/Applied_Cumulative_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Applied_Cumulative_Indexation__c</fullName>
    <description>BODEV-3370 : Used to store the cumulative indexation % applied to renewal</description>
    <label>Applied Cumulative Indexation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>