metadata/force-app/main/default/objects/Quote/fields/Applied_Upcoming_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Applied_Upcoming_Indexation__c</fullName>
    <description>BODEV-3370 : Used to store the upcoming indexation % for the first year of the renewal</description>
    <label>Applied Upcoming Indexation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>