metadata/force-app/main/default/objects/Quote/fields/ARR_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>ARR_Before_Discount__c</fullName>
    <description>Sum of Total Price Before Discount Mapped of ARR line items.</description>
    <label>ARR Before Discount</label>
    <summarizedField>QuoteLineItem.Total_Price_Before_Discount_Mapped__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.For_Renewal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>