metadata/force-app/main/default/objects/Quote/fields/Cap_Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cap_Indexation_Rate__c</fullName>
    <description>In case Variable Indexation is capped for this contract, specify the cap %.</description>
    <label>Cap Indexation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>