metadata/force-app/main/default/objects/Quote/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>BODEV-3370 : End date of the contract in the opp associated with the quote</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>