metadata/force-app/main/default/objects/Quote/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>BODEV-3370 : Start date of the contract in the opp associated with the quote</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>