metadata/force-app/main/default/objects/Quote/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>Calculated by a flow every time either Start/Date is updated</description>
    <label>Contract Term</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>