metadata/force-app/main/default/objects/Quote/fields/Default_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_ARR__c</fullName>
    <label>Default Price ARR</label>
    <summarizedField>QuoteLineItem.Total_Default_Price_ARR_One_off__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.For_Renewal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>