metadata/force-app/main/default/objects/Quote/fields/Discount_Amount_ARR__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_ARR__c</fullName>
    <description>Indicates the discount given on the ARR amount in the quote.</description>
    <formula>ROUND(ARR_Before_Discount__c - ARR__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount - ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>