metadata/force-app/main/default/objects/Quote/fields/Discount_Amount_One_off__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_One_off__c</fullName>
    <description>Indicates the discount given on the one off amount in the quote.</description>
    <formula>One_off_Before_Discount__c -  One_off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount - One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>