metadata/force-app/main/default/objects/Quote/fields/Discount_Percent_ARR__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent_ARR__c</fullName>
    <formula>IF( Discount_Amount_ARR__c = 0, 0,
Discount_Amount_ARR__c/ ARR_Before_Discount__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount % - ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>