metadata/force-app/main/default/objects/Quote/fields/Discount_Percent_One_off__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent_One_off__c</fullName>
    <formula>IF(  Discount_Amount_One_off__c = 0,0,
Discount_Amount_One_off__c/ One_off_Before_Discount__c 
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount % - One-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>