metadata/force-app/main/default/objects/Quote/fields/Discount_reasons__c.field-meta.xml
<CustomField>
    <fullName>Discount_reasons__c</fullName>
    <description>Indicate the reason discount is given on this deal.</description>
    <label>Discount reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address escalation</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Drive expansion</fullName>
            </value>
            <value>
                <fullName>Multi-Year Renewal</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Original contract discount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prevent churn</fullName>
            </value>
            <value>
                <fullName>Product Limitations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>