metadata/force-app/main/default/objects/Quote/fields/DoA_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approval_Status__c</fullName>
    <description>Used to store the Approval status of the DOA.</description>
    <label>DoA Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DoA_Approval_Status</valueSetName>
    </valueSet>
</CustomField>