metadata/force-app/main/default/objects/Quote/fields/DoA_Requester_Comments__c.field-meta.xml
<CustomField>
    <fullName>DoA_Requester_Comments__c</fullName>
    <description>Enable requesters to add comments on DoA approval submission.
Filled by the DoA Flow</description>
    <label>DoA Requester Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>