metadata/force-app/main/default/objects/Quote/fields/Enterprise_Pricing_Products__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Pricing_Products__c</fullName>
    <description>BODEV-4533 Created this field to count the Enterprise pricing products added to the QLIs.</description>
    <label># Enterprise Pricing Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>