metadata/force-app/main/default/objects/Quote/fields/Generate_Growth_Planner_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Generate_Growth_Planner_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Growth Planner Sheet</label>
    <type>Checkbox</type>
</CustomField>