metadata/force-app/main/default/objects/Quote/fields/Growth_Planner_Sheet_URL__c.field-meta.xml
<CustomField>
    <fullName>Growth_Planner_Sheet_URL__c</fullName>
    <label>Growth Planner Sheet URL</label>
    <type>Url</type>
</CustomField>