metadata/force-app/main/default/objects/Quote/fields/Indexation_reported_in_previous_contract__c.field-meta.xml
<CustomField>
    <fullName>Indexation_reported_in_previous_contract__c</fullName>
    <description>Indexation amount reported as movements for sales KPI at the order level in the previous contract.</description>
    <inlineHelpText>Indexation amount reported as movements for sales KPI at the order level in the previous contract.</inlineHelpText>
    <label>Indexation reported in previous contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>