metadata/force-app/main/default/objects/Quote/fields/Indexation_Type__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Type__c</fullName>
    <description>Used to generate the Growth Plan Sheet, no need to have it in Page Layout</description>
    <formula>TEXT(Opportunity.Account.Indexation_Type__c )</formula>
    <label>Indexation Type</label>
    <type>Text</type>
</CustomField>