metadata/force-app/main/default/objects/Quote/fields/Initial_Default_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Initial_Default_Price_ARR__c</fullName>
    <description>Sum of Total Initial Default Price ARR/One-off where Pricing Factors to be Applied? is TRUE</description>
    <label>Initial Default Price ARR</label>
    <summarizedField>QuoteLineItem.Total_Initial_Default_Price_ARR_One_off__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Pricing_Factors_to_be_Applied__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>