metadata/force-app/main/default/objects/Quote/fields/Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period__c</fullName>
    <description>BODEV-3370 : Indicate in every X months the customer is billed.</description>
    <label>Invoice Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>