metadata/force-app/main/default/objects/Quote/fields/Latest_DoA__c.field-meta.xml
<CustomField>
    <fullName>Latest_DoA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates which DoA record is the latest one for the Opportunity</description>
    <label>Latest DoA</label>
    <referenceTo>Delegation_of_Authority__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>