metadata/force-app/main/default/objects/Quote/fields/Latest_Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>Latest_Synced_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether this quote is the latest synced one or not. Updated by Sync Quote flow</description>
    <label>Latest Synced Quote?</label>
    <type>Checkbox</type>
</CustomField>