metadata/force-app/main/default/objects/Quote/fields/New_Expansion_ARR_Forecasted_Reported__c.field-meta.xml
<CustomField>
    <fullName>New_Expansion_ARR_Forecasted_Reported__c</fullName>
    <formula>/* return value depending on Opp type, using Quote fields regardless of whether the Opp is open or closed. */
CASE(TEXT(Opportunity.Type),
    &quot;New Business-Enterprise Cloud&quot;, ARR__c,
    &quot;New Business - Expansion Portal&quot;, ARR__c,
    &quot;Existing Business-Upsell&quot;, MAX(ARR__c, 0),
    &quot;Existing Business-Professional Services&quot;, MAX(ARR__c, 0),
    &quot;Existing Business - Platform Transfer&quot;,
        /* Expansion can be reported in Platform Transfer, when Original Renewal ARR captures the ARR before transfer */
        IF(Original_Renewal_ARR__c &gt; 0, MAX(ARR__c - Original_Renewal_ARR__c, 0), 0),
    &quot;Existing Business - Internal Transfer&quot;,
        /* Expansion can be reported in OEM&gt;Direct, when Original Renewal ARR captures the ARR before transfer */
        IF(Original_Renewal_ARR__c &gt; 0, MAX(ARR__c - Original_Renewal_ARR__c, 0), 0),
    &quot;Existing Business-Renewal&quot;,
        /*
        The tricky case on Renewal is when manual discount is given after pricing factors AND
        the discount larger than the offset allowance (Dropped discount + Renewal Uplift amount + Upcoming indexation beyond 2%).
        In this case, Cumulative Indexation and minimum 2% Upcoming Indexation will be recognised in positive movement fields when closed.
        In any other case, simply the gap between Opp ARR and Original Renewal ARR will be recognised in positive movement fields when closed.
        */
        IF(
            /* Discount after pricing factors */
            Initial_Default_Price_ARR__c * (1 + Applied_Cumulative_Indexation__c) * (1 + Applied_Upcoming_Indexation__c) * (1 + Price_Uplift_on_Renewal_percentage__c) - ARR__c &gt;
            /* Offset allowance */
            (Initial_Default_Price_ARR__c - Original_Renewal_ARR__c) + Renewal_Uplift_amount__c +
            IF(Applied_Upcoming_Indexation__c &gt; 0, Upcoming_Indexation_amount__c / Applied_Upcoming_Indexation__c * MAX(Applied_Upcoming_Indexation__c - 0.02, 0), 0),
            MAX(Initial_Default_Price_ARR__c * (1 + Applied_Cumulative_Indexation__c) * (1 + Min(Applied_Upcoming_Indexation__c,0.02)) - Initial_Default_Price_ARR__c, 0),
            MAX(ARR__c - Original_Renewal_ARR__c, 0)
        ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New/Expansion ARR Forecasted/Reported</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>