metadata/force-app/main/default/objects/Quote/fields/No_of_Amendments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Amendments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created this field to track the number of Amendments. Used for table visibility purpose.</description>
    <label>No of Amendments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>