metadata/force-app/main/default/objects/Quote/fields/No_of_Removed_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>No_of_Removed_Quote_Line_Item__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created this field to count the number of removed Quote Line items.Used for table visibility purpose.</description>
    <label>No of Removed Quote Line Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>