metadata/force-app/main/default/objects/Quote/fields/One_off__c.field-meta.xml
<CustomField>
    <fullName>One_off__c</fullName>
    <description>Sum of Total Sales Price ARR/One-off of One-off line items.</description>
    <label>One-off</label>
    <summarizedField>QuoteLineItem.Total_Sales_Price_ARR_One_off__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.For_Renewal__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>