metadata/force-app/main/default/objects/Quote/fields/One_off_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>One_off_Before_Discount__c</fullName>
    <description>Sum of Total Price Before Discount Mapped of One-off line items.</description>
    <label>One-off Before Discount</label>
    <summarizedField>QuoteLineItem.Total_Price_Before_Discount_Mapped__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.For_Renewal__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>