metadata/force-app/main/default/objects/Quote/fields/Opportunity_with_value_based_pricing__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_with_value_based_pricing__c</fullName>
    <description>BODEV-4533 Created this field to identify opportunities with Enterprise pricing products.</description>
    <label>Opportunity with value-based pricing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>