metadata/force-app/main/default/objects/Quote/fields/Order_Generated__c.field-meta.xml
<CustomField>
    <fullName>Order_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Generated</label>
    <type>Checkbox</type>
</CustomField>