metadata/force-app/main/default/objects/Quote/fields/Original_Renewal_ARR__c.field-meta.xml
<CustomField>
    <fullName>Original_Renewal_ARR__c</fullName>
    <description>Used to store the Original Renewal ARR of the renewal opportunity associated with the quote.</description>
    <formula>Opportunity.Original_Renewal_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Renewal ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>