metadata/force-app/main/default/objects/Quote/fields/Paymet_Period__c.field-meta.xml
<CustomField>
    <fullName>Paymet_Period__c</fullName>
    <description>BODEV-3370 : Indicate the period within which the customer should pay for the invoice.</description>
    <label>Payment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due on receipt</fullName>
            </value>
            <value>
                <fullName>15 days</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>75 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>120 days</fullName>
            </value>
            <value>
                <fullName>30 Days ME</fullName>
            </value>
            <value>
                <fullName>60 Days ME</fullName>
            </value>
            <value>
                <fullName>90 Days ME</fullName>
            </value>
            <value>
                <fullName>150 days</fullName>
            </value>
            <value>
                <fullName>180 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>