metadata/force-app/main/default/objects/Quote/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>BODEV-3370 : Purchase Order Number given from the customer side, if they need.</description>
    <label>PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>