metadata/force-app/main/default/objects/Quote/fields/Price_Calculation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Price_Calculation_Timestamp__c</fullName>
    <label>Price Calculation Timestamp</label>
    <type>DateTime</type>
</CustomField>