metadata/force-app/main/default/objects/Quote/fields/Price_Uplift_On_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Price_Uplift_On_Renewal__c</fullName>
    <description>Indicates whether Price uplift is applied on the renewal or not.</description>
    <label>Price Uplift On Renewal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>