metadata/force-app/main/default/objects/Quote/fields/Price_Uplift_on_Renewal_percentage__c.field-meta.xml
<CustomField>
    <fullName>Price_Uplift_on_Renewal_percentage__c</fullName>
    <description>BODEV-3370 : Used to capture the price uplift on renewal % agreed with the customer</description>
    <label>Price Uplift on Renewal %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>