metadata/force-app/main/default/objects/Quote/fields/Pricing_Factors_Applied__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Factors_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-3370 : Indicate whether pricing factors have been applied or not.</description>
    <label>Pricing Factors Applied?</label>
    <type>Checkbox</type>
</CustomField>