metadata/force-app/main/default/objects/Quote/fields/Quote_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID_18_digits__c</fullName>
    <formula>casesafeid(Id)</formula>
    <label>Quote ID(18 digits)</label>
    <type>Text</type>
</CustomField>