metadata/force-app/main/default/objects/Quote/fields/Quote_Summary__c.field-meta.xml
<CustomField>
    <fullName>Quote_Summary__c</fullName>
    <formula>IF(
ISPICKVAL( DoA_Approval_Status__c , &quot;Pending&quot;), 
IMAGE(&apos;/resource/Icon_Lock&apos;, &quot;Locked&quot;, 25,25) &amp; &quot; &quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Summary</label>
    <type>Text</type>
</CustomField>