metadata/force-app/main/default/objects/Quote/fields/Renewal_Uplift_amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift_amount__c</fullName>
    <description>Renewal uplift amount calculated based on ((Initial Default Price ARR+Cumulative Indexation amount+Upcoming Indexation amount)*Price Uplift On Renewal %) which is added to sales price of the products.</description>
    <formula>IF(Pricing_Factors_Applied__c &amp;&amp; ISPICKVAL(Price_Uplift_On_Renewal__c,&apos;Yes&apos;),
/* -- Initial Default Price ARR will be 0 in few closed opps as the initial default price is not updated on OLI&apos;s, in that case Original Renewal ARR is used for calculation -- */

(IF(Initial_Default_Price_ARR__c =0, Original_Renewal_ARR__c ,Initial_Default_Price_ARR__c)
+ Cumulative_Indexation_amount__c + Upcoming_Indexation_amount__c)*
Price_Uplift_on_Renewal_percentage__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Uplift amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>