metadata/force-app/main/default/objects/Quote/fields/Renewal_Upsell_ARR__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Upsell_ARR__c</fullName>
    <formula>Total_Renewal_Upsell_ARR__c -  Cumulative_Indexation_amount__c -  Upcoming_Indexation_amount__c -  Renewal_Uplift_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Upsell ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>