metadata/force-app/main/default/objects/Quote/fields/Sub_Total_Annual_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Annual_Subscription_Fee__c</fullName>
    <description>Used to generate RA in SpotDraft</description>
    <formula>Total_Annual_Subscription_Fee__c +  Total_Additional_Products_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Total Annual Subscription Fee</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>