metadata/force-app/main/default/objects/Quote/fields/Sync_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sync_Timestamp__c</fullName>
    <description>The Date/Time at which the Quote was Last Synced</description>
    <inlineHelpText>The Date/Time at which the Quote was Last Synced</inlineHelpText>
    <label>Sync Timestamp</label>
    <type>DateTime</type>
</CustomField>