metadata/force-app/main/default/objects/Quote/fields/Total_Additional_Products_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional_Products_Purchased__c</fullName>
    <label>Total Additional Products Purchased</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>