metadata/force-app/main/default/objects/Quote/fields/Total_Annual_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Subscription_Fee__c</fullName>
    <label>Total Annual Subscription Fee</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>