metadata/force-app/main/default/objects/Quote/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <formula>(ARR__c * Contract_Term__c/12) +  One_off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>