metadata/force-app/main/default/objects/Quote/fields/Total_Expansion_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Expansion_ARR__c</fullName>
    <description>Used to show the total expansion for commission calculation (excl. cumulative indexation)</description>
    <formula>Renewal_Upsell_ARR__c +  Upcoming_Indexation_amount__c +  Renewal_Uplift_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expansion ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>