metadata/force-app/main/default/objects/Quote/fields/Total_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Increase__c</fullName>
    <label>Total Price Increase</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>