metadata/force-app/main/default/objects/Quote/fields/Total_Renewal_Upsell_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Renewal_Upsell_ARR__c</fullName>
    <formula>ARR__c -  Original_Renewal_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Renewal Upsell ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>