metadata/force-app/main/default/objects/Quote/fields/Ultimate_DoA_Approver__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_DoA_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User who is determined to be Ultimate DoA Approver.</description>
    <label>Ultimate DoA Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>