metadata/force-app/main/default/objects/Quote/fields/Ultimate_DoA_Level__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_DoA_Level__c</fullName>
    <description>Indicates the ultimate DoA level on the latest DoA record</description>
    <formula>IF(ISBLANK(Latest_DoA__c), &quot;&quot;, TEXT(Latest_DoA__r.Ultimate_DoA_Level__c) )</formula>
    <label>Ultimate DoA Level</label>
    <type>Text</type>
</CustomField>